--- a/package.json
+++ b/package.json
@@ -2,19 +2,14 @@
   "name": "petresgate",
   "version": "2.0.0",
   "description": "🐾 PetResgate — Conectando Pets Perdidos aos Seus Lares",
-  "main": "src/app.js",
+  "main": "serverMongoDB.js",
   "type": "module",
   "scripts": {
-    "start": "node src/app.js",
-    "start:mongodb": "node src/appMongoDB.js",
-    "dev": "node --watch server.js",
-    "dev:mongodb": "node --watch serverMongoDB.js",
-    "server": "node server.js",
-    "server:mongodb": "node serverMongoDB.js",
+    "start": "node serverMongoDB.js",
+    "dev": "node --watch serverMongoDB.js",
+    "build": "echo 'Build concluído'",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "console": "node src/app.js",
-    "console:mongodb": "node src/appMongoDB.js --mongodb",
-    "build": "echo 'Build script - adicionar se necessário'"
+    "vercel-build": "npm install"
   },
   "keywords": [
     "pets",
@@ -23,7 +18,8 @@
     "perdidos",
     "encontrados",
     "mongodb",
-    "nodejs"
+    "nodejs",
+    "vercel"
   ],
   "author": "Equipe PetResgate",
   "license": "MIT",
@@ -31,15 +27,12 @@
     "readline-sync": "^1.4.10",
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.6",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.1"
+    "jest": "^29.7.0"
   },
   "engines": {
     "node": ">=18.0.0"
