fix: update vercel.json confg

--- a/vercel.json
+++ b/vercel.json
@@ -16,8 +16,9 @@
       "dest": "/public/$1"
     }
   ],
-  "env": {
-    "MONGODB_URI": "@mongodb_uri",
-    "NODE_ENV": "production"
+  "functions": {
+    "serverMongoDB.js": {
+      "maxDuration": 10
+    }
   }
 }
